--- a/assignment-11/style.css
+++ b/assignment-11/style.css
@@ -50,9 +50,16 @@ td {
   color: white;
   cursor: pointer;
 }
+
 input {
   padding: 10px;
   font-size: 16px;
   border-radius: 10px;
   border: none;
+}
+.hide {
+  visibility: hidden;
+}
+.visibl {
+  visibility: visible;
 }
