--- a/assignment-18/src/components/subHeader/subHeader.css
+++ b/assignment-18/src/components/subHeader/subHeader.css
@@ -1,4 +1,18 @@
 .subHeader {
   height: 400px;
   background-color: rgb(199, 81, 34);
+  padding-left: 100px;
+  padding-right: 100px;
+}
+.textSlide {
+  float: left;
+  color: white;
+  width: 300px;
+  padding-top: 50px;
+  padding-left: 150px;
+}
+.image {
+  width: 300px;
+  height: 300px;
+  padding: 30px;
 }
